Solve Sonarcloud problems